--- a/src/index.css
+++ b/src/index.css
@@ -1,191 +1,150 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import "tailwindcss";
+@import "tw-animate-css";
 
-* {
-  padding: 0; margin: 0;
-  font-family: montserrat;
+@custom-variant dark (&:is(.dark *));
+
+@theme {
+  --font-sans: 'Montserrat', sans-serif;
 }
 
-body {
-  background-color: #ffffff;
-  color: #000000;
+@theme inline {
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --color-card: var(--card);
+  --color-card-foreground: var(--card-foreground);
+  --color-popover: var(--popover);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-primary: var(--primary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-secondary: var(--secondary);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-muted: var(--muted);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-accent: var(--accent);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-destructive: var(--destructive);
+  --color-border: var(--border);
+  --color-input: var(--input);
+  --color-ring: var(--ring);
+  --color-chart-1: var(--chart-1);
+  --color-chart-2: var(--chart-2);
+  --color-chart-3: var(--chart-3);
+  --color-chart-4: var(--chart-4);
+  --color-chart-5: var(--chart-5);
+  --color-sidebar: var(--sidebar);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-ring: var(--sidebar-ring);
+  --font-sans: Montserrat, ui-sans-serif, system-ui, sans-serif;
 }
 
-.home-container {
-  display: grid;
-  gap: 24px;
+:root {
+  --radius: 0.625rem;
+  --background: oklch(1 0 0);
+  --foreground: oklch(0.13 0.028 261.692);
+  --card: oklch(1 0 0);
+  --card-foreground: oklch(0.13 0.028 261.692);
+  --popover: oklch(1 0 0);
+  --popover-foreground: oklch(0.13 0.028 261.692);
+  --primary: oklab(57.531% 0.20581 0.11498);
+  --primary-foreground: oklch(0.985 0.002 247.839);
+  --secondary: #121212;
+  --secondary-foreground: #ffffff;
+  --muted: oklch(0.967 0.003 264.542);
+  --muted-foreground: oklch(0.551 0.027 264.364);
+  --accent: #faf9f9ff;
+  --accent-foreground: oklch(0.21 0.034 264.665);
+  --destructive: oklch(0.577 0.245 27.325);
+  --border: oklch(0.928 0.006 264.531);
+  --input: oklch(0.928 0.006 264.531);
+  --ring: oklch(0.707 0.022 261.325);
+  --chart-1: oklch(0.646 0.222 41.116);
+  --chart-2: oklch(0.6 0.118 184.704);
+  --chart-3: oklch(0.398 0.07 227.392);
+  --chart-4: oklch(0.828 0.189 84.429);
+  --chart-5: oklch(0.769 0.188 70.08);
+  --sidebar: oklch(0.985 0.002 247.839);
+  --sidebar-foreground: oklch(0.13 0.028 261.692);
+  --sidebar-primary: oklch(0.21 0.034 264.665);
+  --sidebar-primary-foreground: oklch(0.985 0.002 247.839);
+  --sidebar-accent: oklch(0.967 0.003 264.542);
+  --sidebar-accent-foreground: oklch(0.21 0.034 264.665);
+  --sidebar-border: oklch(0.928 0.006 264.531);
+  --sidebar-ring: oklch(0.707 0.022 261.325);
 }
 
-.dashboard-layout {
-  display: flex;
-  height: 100vh;
-  width: 100vw;
-  gap: 6px;
+.dark {
+  --background: oklch(0.13 0.028 261.692);
+  --foreground: oklch(0.985 0.002 247.839);
+  --card: oklch(0.21 0.034 264.665);
+  --card-foreground: oklch(0.985 0.002 247.839);
+  --popover: oklch(0.21 0.034 264.665);
+  --popover-foreground: oklch(0.985 0.002 247.839);
+  --primary: oklch(0.928 0.006 264.531);
+  --primary-foreground: oklch(0.21 0.034 264.665);
+  --secondary: oklch(0.278 0.033 256.848);
+  --secondary-foreground: oklch(0.985 0.002 247.839);
+  --muted: oklch(0.278 0.033 256.848);
+  --muted-foreground: oklch(0.707 0.022 261.325);
+  --accent: oklch(0.278 0.033 256.848);
+  --accent-foreground: oklch(0.985 0.002 247.839);
+  --destructive: oklch(0.704 0.191 22.216);
+  --border: oklch(1 0 0 / 10%);
+  --input: oklch(1 0 0 / 15%);
+  --ring: oklch(0.551 0.027 264.364);
+  --chart-1: oklch(0.488 0.243 264.376);
+  --chart-2: oklch(0.696 0.17 162.48);
+  --chart-3: oklch(0.769 0.188 70.08);
+  --chart-4: oklch(0.627 0.265 303.9);
+  --chart-5: oklch(0.645 0.246 16.439);
+  --sidebar: oklch(0.21 0.034 264.665);
+  --sidebar-foreground: oklch(0.985 0.002 247.839);
+  --sidebar-primary: oklch(0.488 0.243 264.376);
+  --sidebar-primary-foreground: oklch(0.985 0.002 247.839);
+  --sidebar-accent: oklch(0.278 0.033 256.848);
+  --sidebar-accent-foreground: oklch(0.985 0.002 247.839);
+  --sidebar-border: oklch(1 0 0 / 10%);
+  --sidebar-ring: oklch(0.551 0.027 264.364);
 }
 
-
-/* Overview Section */
-.greet-user {
-  h1 {
-    font-weight: 500;
-    font-size: 40px;
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
   }
+  html {
+    font-family: var(--font-sans)
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+  button {
+    @apply cursor-pointer;
+  }
+
+body, html{
+    background: #fff;
+    padding: 0;
+    margin: 0;
 }
 
-/* Wallet Balance */
-.banner {
-  color: #fff;
-  border-radius: 16px;
-  padding: 36px 48px;
-  background: linear-gradient(to right, #e30101, #9c0303);
-
-  .banner-content {
-    display: grid;
-    gap: 48px;
-
-    .wallet {
-      display: grid;
-      gap: 24px;
-
-      h1 {
-        font-weight: 600;
-        font-size: 48px;
-      }
-      .wallet-balance {
-        display: grid;
-        gap: 12px;
-      }
-      .btn-actions {
-        display: flex;
-        gap: 12px;
-      }
+  .rule-notification {
+    @apply p-6 pt-4 pb-4 ml-5 mr-5 bg-yellow-100 rounded-xl;
+    p {
+      @apply text-gray-500 text-sm
+    } h2 {
+      @apply text-xl font-sans text-gray-900 font-medium
     }
   }
-}
-
-/* Actions */
-.actions {
-  display: grid;
-  gap: 18px;
-
-  h2 {
-    font-weight: 700;
-    font-size: 20px;
-    color: #121212;
-  }
-
-  .actions-container {
-    display: flex;
-    padding: 48px;
-    border-radius: 16px;
-    background-color: #faeaea;
-    
-      .headline {
-        display: grid;
-        gap: 12px;
-      
-        h1 {
-          font-size: 36px;
-          font-weight: 500;
-        } p {
-          font-size: 18px;
-        }
-      }
-      
-      .actions-img {
-        img {
-          position: absolute;
-          right: 10%; top: 50%;
-          width: 220px;
-        }
-      }
-  }
-}
-
-/* DM to Credit */
-.credit {
-  border-radius: 24px;
-}
-
-.chat-dm-container {
-  margin: 40px auto;
-  padding: 20px;
-}
-
-
-.chat-container {
-  display: flex;
-  flex-direction: column;
-  height: 550px;
-  width: 100%;
-}
-
-.chat-intro {
-  height: 75vh;
-  text-align: center;
-
-  h1 {
-    font-size: 48px;
-    font-weight: 500;
-  } p {
-    color: #b4b4b4;
-  }
-}
-
-.chat-body {
-  flex-grow: 1;
-  padding: 10px;
-  overflow-y: auto;
-  border-radius: 10px;
-  background-color: #f8f6f6;
-}
-
-.message {
-  margin-bottom: 20px;
-  padding: 12px 26px;
-  display: inline-block;
-  max-width: 80%;
-  font-size: 18px;
-  border-radius: 10px;
-
-  .message-time {
-    margin-top: 6px;
-    font-size: 12px;
-    color: #cccccc;
-  }
-}
-
-.user-message {
-  color: #fff;
-  float: right;
-  clear: both;
-  text-align: right;
-  background-color: #121212;
-}
-
-.ai-message {
-  color: #121212;
-  float: left;
-  clear: both;
-  font-weight: 500;
-  margin-bottom: 5px;
-  background-color: #fff;
-  border: 1px solid #f3f2f2;
-}
-
-.chat-input-container {
-  display: flex;
-  gap: 8px;
-  padding: 10px 24px;
-  clear: both;
-  align-items: center;
-  align-self: center;
-}
-
-.chat-input-container input[type="text"] {
-  flex-grow: 1;
-  padding: 16px 32px;
-  border: none;
-  color: #fff;
-  border-radius: 50px;
-  background-color: #121212;
 }
